@@ -92,7 +92,8 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     Closes: #615899
   * dpkg-buildflags now supports "--export=configure" to output compilation
     flags on a single line with double quotes as delimiter of the various
-    values.
+    values. It also uses DEB_<flag>_MAINT_<op> to let the maintainer
+    extend the build flags to use.
 
   [ Guillem Jover ]
   * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
